remove /servers/* from REST API
